fix: ActionView::Template::Error in index
fix: app/views/dashboard/index.html.erb

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -118,7 +118,7 @@
               </div>
               <div class="text-sm text-gray-500">
                 <div><%= project.environment %></div>
-                <div>by <%= project.user.email %></div>
+                <div>by <%= project.user&.email || 'Unknown User' %></div>
               </div>
             </div>
           </div>
